--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 dj-database-url==0.5.0
 Django==2.2.1
 django-rainbowtests==0.6.0
+django-heroku
 gunicorn==19.9.0
 psycopg2-binary==2.7.7
 Pygments==2.4.0
