--- a/app.json
+++ b/app.json
@@ -1,23 +1,9 @@
 {
-  "addons": [
-    "heroku-postgresql"
-  ],
-  "buildpacks": [
-    {
-      "url": "heroku/python"
+  "environments": {
+    "test": {
+      "scripts": {
+        "test": "python3 manage.py test"
+      }
     }
-  ],
-  "description": "Runs Django tests for my_simple_library",
-  "env": {
-  },
-  "formation": {
-    "web": {
-      "quantity": 1
-    }
-  },
-  "name": "my_simple_library_test",
-  "scripts": {
-    "postdeploy": "python3 manage.py test"
-  },
-  "stack": "heroku-18"
+  }
 }
