--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "environments": {
     "test": {
       "scripts": {
+        "test-setup": "python manage.py collectstatic",
         "test": "python3 manage.py test"
       }
     }
