--- a/app.json
+++ b/app.json
@@ -1,8 +1,10 @@
 {
+  "addons": [
+    "heroku-postgresql"
+  ],
   "environments": {
     "test": {
       "scripts": {
-        "test-setup": "python manage.py collectstatic",
         "test": "python3 manage.py test"
       }
     }
