--- a/app.json
+++ b/app.json
@@ -1,5 +1,11 @@
 {
   "environments": {
+    "env":{
+      "DJANGO_SECRET_KEY": {
+        "description": "A secret key for verifying the integrity of signed cookies.",
+        "generator": "secret"
+        }
+    },
     "test": {
       "addons": [
           "heroku-postgresql:hobby-dev"
