--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==2.2.1
 django-environ
 django-rainbowtests==0.6.0
 django-heroku
+django-tables2
 gunicorn==19.9.0
 psycopg2-binary==2.7.7
 Pygments==2.4.0
