--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 dj-database-url==0.5.0
 Django==2.2.1
+django-bootstrap3
 django-environ
+django-filter
 django-rainbowtests==0.6.0
 django-heroku
 django-tables2
