--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+bootstrap4==0.1.0
 dj-database-url==0.5.0
 Django==2.2.1
 django-bootstrap3
+django-crispy-forms==1.7.2
 django-environ
 django-filter
 django-rainbowtests==0.6.0
